== 1.3.003

    Enhancements, changes:
    ----------------------------
    + Automatic location assignment when device added to rack (#1230);
    + API:
        + Encrypyted requests can now also be form-encoded (#1191);

    Translations:
    ----------------------------
    + French translation updated to verson 1.3;

    Bugfixes:
    ----------------------------
    + Fixed RACK images not displayed if not root location (#1204)

== 1.3

    New features:
    ------------
    + Multicast module (RFC1112, RFC2464) with IP to MAC mapping and multicast networks overview;
    + Threshold module for subnets;
    + Racks module (Rack drawing) for devices;
    + Address linking by selected field;
    + Custom logo for site and mails;
    + PSTN number management module;
    + SNMP module:
        + Subnets discovery from route table (all subnets, nested subnets, add new subnet);
        + Hosts discovery scans via ARP check/interface check;
        + Hosts discovery scans via ARP + MAC address check (detects interface);
        + VLAN discovery;
        + VRF discovery;
        + Status update scans via ARP check;
    + NAT module
        + Source / static / destination NAT;
        + Linking subnet to NAT
        + Show bindings under tools and next to IP address / subnet
    + Locations module
        + Map devices / racks / subnets to location;
        + Google maps integration;
    + SAML2 authentication (SSO)

    Enhancements, changes:
    ----------------------------
    + Folders can now contain addresses;
    + API:
        - Api v1 removed;
        + If subnet gateway defined gatewayId is returned in subnet details;
        + Automatically added nameservers to subnet results;
        + Added subnet usage result for each subnet in section;
        + Added custom fields for all controllers;
        + New subnets automatically get parent permissions;
        + Added IP calculation to subnet;