@@ -13,10 +13,13 @@ $custom = $Tools->fetch_custom_fields('racks');
 # get hidden fields
 $hidden_custom_fields = json_decode($User->settings->hiddenCustomFields, true);
 $hidden_custom_fields = is_array(@$hidden_custom_fields['racks']) ? $hidden_custom_fields['racks'] : array();
-
 # create csrf token
 $csrf = $User->csrf_cookie ("create", "rack_devices");
 
 # all racks or one ?
-if (isset($_GET['subnetId']))   { include("print-single-rack.php"); }
-else                            { include("print-racks.php"); }
+if (isset($_GET['subnetId'])) {
+	# map
+	if($_GET['subnetId']=="map") { include("print-racks.php"); }
+	else 						 { include("print-single-rack.php"); }
+}
+else                             { include("print-racks.php"); }
