@@ -116,5 +116,3 @@ function create_link ($l0 = null, $l1 = null, $l2 = null, $l3 = null, $l4 = null
 
 /* get version */
 include('version.php');
-
-?>
